--- a/Artificial intelligence/Tema 2/Readme
+++ b/Artificial intelligence/Tema 2/Readme
@@ -1,6 +1,6 @@
-Se cere identificarea comunităților existente într-o rețea folosind un algoritm evolutiv. Se vor folosi
+Se cere identificarea comunităților existente într-o rețea folosind un algoritm Greedy. Se vor folosi:
 
-informații privind reprezentarea cromozomilor și operatorii genetici din lucrarea: Pizzuti, Clara. "Evolutionary computation for community detection in networks: a review." IEEE Transactions on Evolutionary Computation 22.3 (2017): 464-483. link
+informații privind metoda Greedy propusa de Newman - Newman, M. E. (2004). Fast algorithm for detecting community structure in networks. Physical review E, 69(6), 066133. link
 reteaua sociala dezvoltata semestrul trecut la MAP (cu construirea in prealabil a grafului corespunzator ei)
 cele 4 rețele / seturi de date din folderul asociat laboratorului current (in format GML – more details here)
 rețele / seturi de date identificate de student
